# mtapp

./: .env.sample  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
json-response/: Cargo.toml
json-response-derive/: Cargo.toml
json-response-derive/src/: ctxt.rs  lib.rs
json-response-derive/src/errors/: attrs.rs  expand.rs  mod.rs  types.rs
json-response/src/: lib.rs  response.rs  utoipa_impls.rs
mtapp/: Cargo.toml
mtapp-auth/: Cargo.toml
mtapp-auth/src/: app.rs  errors.rs  extract.rs  handlers.rs  lib.rs  middleware.rs  openapi.rs  providers.rs  schemas.rs
mtapp-grant/: Cargo.toml
mtapp-grant/src/: admin.rs  app.rs  commands.rs  errors.rs  filters.rs  lib.rs  models.rs  openapi.rs  provider.rs  schemas.rs
mtapp-scope/: Cargo.toml
mtapp-scope/migrations/20200823162413_create_table_scopes/: .meta.json  down.sql  up.sql
mtapp-scope/src/: admin.rs  app.rs  errors.rs  filters.rs  lib.rs  models.rs  openapi.rs  schemas.rs
mtapp-session/: Cargo.toml
mtapp-session/migrations/20200823162974_create_table_sessions/: .meta.json  up.sql
mtapp-session/src/: admin.rs  app.rs  errors.rs  filters.rs  handlers.rs  lib.rs  models.rs  openapi.rs  provider.rs  schemas.rs
mtapp-user/: Cargo.toml
mtapp-user/migrations/20200629191917_create_table_users/: .meta.json  up.sql
mtapp-user/migrations/20200823162829_create_table_grants/: .meta.json  down.sql  up.sql
mtapp-user/src/: admin.rs  app.rs  commands.rs  errors.rs  filters.rs  handlers.rs  helpers.rs  lib.rs  middlware.rs  models.rs  openapi.rs  provider.rs  schemas.rs
mtapp/migrations/20200629191634_create_function_update_timestamp/: .meta.json  down.sql  up.sql
mtapp/src/: app.rs  lib.rs  migration.rs  openapi.rs  reactor.rs
mtapp/src/extractors/: errors.rs  form.rs  json.rs  mod.rs  path.rs  query.rs  typedheaders.rs
schemer-migration/: Cargo.toml
schemer-migration-macros/: Cargo.toml
schemer-migration-macros/src/: collect.rs  lib.rs
schemer-migration/src/: command.rs  lib.rs  main.rs
schemer-migration/src/migration/: def.rs  id.rs  migrator.rs  mod.rs
src/: main.rs
