[workspace]
members = [
    ".",
    "json-response",
    "json-response-derive",
    "mtapp",
    "schemer-migration",
    "schemer-migration-macros",
    "mtapp-auth",
    "mtapp-scope",
    "mtapp-user",
    "mtapp-grant",
    "mtapp-session",
]

resolver = "2"

[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
name = "myapp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
clap = "4"
simplelog = "0.12.0"

basteh = "0.4.0-alpha.2"
basteh-memory = "0.4.0-alpha.2"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "offline"] }

mtapp = "0"
mtapp-auth = "0.1.0"
mtapp-scope = "0.1.0"
mtapp-user = "0.1.0"
mtapp-grant = "0.1.0"
mtapp-session = "0.1.0"

[patch.crates-io]
mtapp = { path = "./mtapp/" }
mtapp-auth = { path = "./mtapp-auth/" }
mtapp-scope = { path = "./mtapp-scope/" }
mtapp-user = { path = "./mtapp-user/" }
mtapp-grant = { path = "./mtapp-grant/" }
mtapp-session = { path = "./mtapp-session/" }

schemer-migration = { path = "./schemer-migration/" }
schemer-migration-macros = { path = "./schemer-migration-macros/" }

json-response = { path = "./json-response/" }
json-response-derive = { path = "./json-response-derive" }

schemer = { git = "https://github.com/pooyamb/schemer.git", branch = "async" }
