[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
name = "json-response"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
json-response-derive = "0.1"
log = "0.4"
utoipa = { version = "3" }
