[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
name = "mtapp-auth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-extra = { version = "0.7", features = ["cookie"] }
tower = "0.4"
utoipa = { version = "3" }

uuid = { version = "1.1.2", features = ["serde", "v4"] }
jsonwebtoken = "8.1.1"
secrecy = "0.8.0"

sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "offline"] }
basteh = "=0.4.0-alpha.5"

serde = { version = "1.0.137", features = ["derive"] }
json-resp = { version = "0.1.1", features = ["openapi", "log"] }

mtapp = "0"
