[package]
name = "mtapp-grant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
utoipa = { version = "3", features = ["uuid", "chrono"] }

clap = "4"
dialoguer = "0.10"

sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "offline"] }
sea-query = { version = "0.28", default-features = false, features = [
    "backend-postgres",
    "with-chrono",
    "with-uuid",
    "attr",
] }
sea-query-binder = { version = "0.3", features = ["sqlx-postgres", "with-chrono", "with-uuid"] }
seaqs = "0"

serde = { version = "1.0.137", features = ["derive"] }
serde-querystring-axum = "0.2.0"
json-resp = "0.1.1"

mtapp = "0"
mtapp-auth = "0"
mtapp-user = "0"
mtapp-scope = "0"
