[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
name = "schemer-migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

dotenvy = "0.15"

cargo_toml = "0.14"
clap = "4"
cli-table = "0.4.7"
schemer = { version = "0.2", git = "https://github.com/pooyamb/schemer.git" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "offline"] }
uuid = { version = "1", features = ["serde"] }

schemer-migration-macros = "0"
